# rusty-todo-md

./: .codecov.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  PR_draft.md  README.md  TODO.md  bump-version.sh  code.md  concatenate-files.py  dist-workspace.toml  flake.nix  pest_book.md  pyproject.toml  shell.nix
.cargo/: config.toml
.claude/: settings.json
.claude/skills/qa/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: conventional-commit.instructions.md
.github/workflows/: auto-release.yaml  ci.yaml  copilot-setup-steps.yml  history-cleanliness.yml  publish-release.yaml  release-bump.yml  release-plz.yml  release-wheels.yaml  release.yaml  release.yml  test_workflow.yml  version-bump-release.yaml  version-bump-tag.yaml
.serena/: project.yml
coverage/: overlap-report.md  triage-verdicts.md
docs/experiments/test-pruning-202/: README.md  overlap-data.json  overlap-report.md  triage-verdicts.md
docs/experiments/test-pruning-202/scripts/: build_subagent_prompts.py  extract_per_test_coverage.sh  overlap_analysis.py
lldb-bin/: lldb-server
scripts/: build_subagent_prompts.py  extract_per_test_coverage.sh  overlap_analysis.py
src/: aggregator.rs  cli.rs  exclusion.rs  git_utils.rs  lib.rs  logger.rs  main.rs  merge_driver.rs  test_utils.rs  todo_extractor.rs  todo_md.rs  todo_md_internal.rs
src/languages/: common.rs  common_syntax.rs  go.pest  go.rs  js.pest  js.rs  mod.rs  python.pest  python.rs  rust.pest  rust.rs  ts.pest  ts.rs
src/todo_extractor_internal/: aggregator.rs  mod.rs
src/todo_extractor_internal/languages/: common.rs  common_syntax.rs  dockerfile.pest  dockerfile.rs  go.pest  go.rs  js.pest  js.rs  markdown.pest  markdown.rs  mod.rs  python.rs  rust.pest  rust.rs  shell.rs  sql.pest  sql.rs  toml.rs  yaml.pest  yaml.rs
tests/: aggregator_test.rs  cli_args_tests.rs  cli_error_tests.rs  cli_no_files_tests.rs  empty_todo_validation_tests.rs  exclude_tests.rs  git_tests.rs  glob_exclude_tests.rs  integration.rs  merge_driver_tests.rs  mod.rs  multi_language_tests.rs  python_tests.rs  rust_tests.rs  snapshot_tests.rs  utils.rs
tests/fixtures/snapshots/auto_add_stages_todo_md/: sample.rs
tests/fixtures/snapshots/awkward_positions/: quirks.rs
tests/fixtures/snapshots/custom_markers_only_todo/: sample.rs
tests/fixtures/snapshots/custom_todo_path/: sample.rs
tests/fixtures/snapshots/dockerfile_multiple_markers/: Dockerfile
tests/fixtures/snapshots/empty_python_todo_marker_fails/: sample.py
tests/fixtures/snapshots/empty_todo_marker_fails/: sample.rs
tests/fixtures/snapshots/exclude_dir_flag/: lib.rs
tests/fixtures/snapshots/go_with_block_comments/: server.go
tests/fixtures/snapshots/js_block_comment_continuation/: complex.js
tests/fixtures/snapshots/jsx_with_markers/: component.jsx
tests/fixtures/snapshots/no_markers/: clean.rs
tests/snapshots/: snapshot_tests__auto_add_stages_todo_md.snap  snapshot_tests__auto_add_stages_todo_md@git_index.snap  snapshot_tests__awkward_positions.snap  snapshot_tests__custom_markers_only_todo.snap  snapshot_tests__custom_todo_path.snap  snapshot_tests__dockerfile_multiple_markers.snap  snapshot_tests__empty_python_todo_marker_fails@stderr.snap  snapshot_tests__empty_todo_marker_fails.snap  snapshot_tests__empty_todo_marker_fails@stderr.snap  snapshot_tests__exclude_dir_flag.snap  snapshot_tests__exclude_glob_recursive.snap  snapshot_tests__go_with_block_comments.snap  snapshot_tests__js_block_comment_continuation.snap  snapshot_tests__jsx_with_markers.snap  snapshot_tests__mixed_languages.snap  snapshot_tests__no_markers.snap  snapshot_tests__non_git_directory_fails@stderr.snap  snapshot_tests__python_basic.snap  snapshot_tests__regenerate_wipes_todo_md_conflict_markers.snap  snapshot_tests__rust_basic.snap  snapshot_tests__second_run_file_deleted.snap  snapshot_tests__second_run_message_changes.snap  snapshot_tests__source_file_with_conflict_markers_is_skipped@stderr.snap  snapshot_tests__todo_md_conflict_markers_emit_advisory@stderr.snap
(+23 files in other folders)
