[package]
name = "rusty-todo-md"
version = "0.1.7"
edition = "2021"

description = "A multi-language TODO comment extractor for source code files."
license = "MIT"
homepage = "https://github.com/simone-viozzi/rusty-todo-md"
repository = "https://github.com/simone-viozzi/rusty-todo-md"
documentation = "https://github.com/simone-viozzi/rusty-todo-md"

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
comrak = "0.35.0"
git2 = "0.20.0"
regex = "1.11.1"
tempfile = "3.15.0"
anstyle = "1.0.10"
chrono = "0.4.39"
env_logger = { version = "0.11.6", features = ["color"] }
log = "0.4.25"
once_cell = "1.20.2"
pest = { version = "2.7.15", features = ["pretty-print"] }
pest_derive = { version = "2.7.15", features = ["grammar-extras"] }

[package.metadata.maturin]
bindings = "bin"

[package.metadata.release]
# Format the Git tag as "v<version>"
tag-name = "v{{version}}"
# Automatically push the commit and tag to remote
push = true

pre-release-hook = ["./bump-version.sh"]

